# cpp-project-template

./: CMakeLists.txt
cmake/: add_library.cmake
include/hannessteffenhagen/: example.hpp
src/: example.cpp
